--- a/.gitignore
+++ b/.gitignore
@@ -158,11 +158,12 @@ __vm/
 vc-fileutils.settings
 
 #Visual Studio Code
-.vscode
+#.vscode
 .vscode/.browse.c_cpp.db*
 .vscode/c_cpp_properties.json
 .vscode/launch.json
 .vscode/*.db
+!.vscode/settings.json
 
 #cmake
 CMakeLists.txt
