It freaking works!

--- a/platformio.ini
+++ b/platformio.ini
@@ -21,7 +21,7 @@ build_dir   = .pioenvs
 lib_dir     = .piolib
 libdeps_dir = .piolibdeps
 boards_dir  = buildroot/share/PlatformIO/boards
-env_default = megaatmega2560
+env_default = LPC1768
 
 [common]
 default_src_filter = +<src/*> -<src/config> -<src/HAL> +<src/HAL/shared>
@@ -166,6 +166,7 @@ lib_deps          = Servo
   LiquidCrystal
   U8glib-HAL=https://github.com/MarlinFirmware/U8glib-HAL/archive/dev.zip
   TMCStepper@<1.0.0
+upload_port       = /media/pi/REARM/
 
 [env:LPC1769]
 platform          = https://github.com/p3p/pio-nxplpc-arduino-lpc176x/archive/master.zip
